# gmfy-server

./: .gitignore  README.md  gmfy-server.cabal
app/: Main.hs
src/: Lib.hs
